Add trait to aid usage by existing frameworks

--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,15 @@
     }
   ],
   "require-dev": {
-      "escapestudios/symfony2-coding-standard": "^2.9"
+    "escapestudios/symfony2-coding-standard": "^2.9",
+    "eventbus-interop/phpleague": "self.version"
   },
   "autoload": {
       "psr-4": {
           "InterOp\\EventBus\\": "src"
       }
   },
+  "minimum-stability": "dev",
   "config": {
     "bin-dir": "bin"
   }
