--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
       "email": "barney@shrikeh.net"
     }
   ],
+  "require": {
+    "php": ">=5.6"
+  },
   "require-dev": {
     "escapestudios/symfony2-coding-standard": "^2.9"
   },
