--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,10 @@
       "EventIO\\InterOp\\Examples\\": "examples"
     }
   },
-  "minimum-stability": "dev",
   "config": {
     "bin-dir": "bin"
+  },
+  "archive": {
+    "exclude": ["*", "!/src"]
   }
 }
